Secrets are ready for AWS
