# internal/citadel/models.go
@@ -1,0 +1,11 @@
+package citadel
+
+type SecretEntry struct {
+	Key   *string
+	Value *string
+}
+
+type SecretResponse struct {
+	Entries   *[]SecretEntry
+	PlainText *string
+}
